@@ -1,6 +1,6 @@
 Package: EpiModel
-Version: 1.0.1.140
-Date: 2014-08-27
+Version: 1.0.1.149
+Date: 2014-08-29
 Title: Mathematical Modeling of Infectious Disease
 Description: Tools for simulating mathematical models of infectious disease.
     Epidemic model classes include deterministic compartmental models,
